--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  * {
+    @apply border-zinc-300;
+  }
+  body {
+    @apply bg-white text-black;
+  }
+}
